--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -20,20 +20,23 @@
             position: relative;
             width: 300px;
             height: 400px;
-
+            padding: 20px;
+            
             .image_container {
+                transition: transform, 0.3s ease;
                 position: relative;
                 width: 100%;
                 height: 100%;
                 background-color: variaveis.$colorSecundary;
                 border-radius: 20px;
-
+                
+                
                 img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-
                 }
+                
 
                 p {
                     position: absolute;
@@ -51,7 +54,11 @@
                     width: 90%;
                 }
             }
+            .image_container:hover {
+                transform: scale(1.2);
+            }
         }
+
 
     }
 
@@ -112,8 +119,10 @@
 
             .info_image {
                 width: 80%;
+                margin: 0 auto;
 
                 img {
+                    max-width: 450px;
                     height: 100%;
                     width: 100%;
                     border-radius: 20px;
